--- a/YanKenPo/index.html
+++ b/YanKenPo/index.html
@@ -48,7 +48,9 @@
         </div>
     </main>
 
-    <div id="game" onclick="showGame()"></div>
+    <div id="game" onclick="showGame()">
+    
+    </div>
 
     <footer></footer>
     
