--- a/YanKenPo/index.html
+++ b/YanKenPo/index.html
@@ -52,7 +52,11 @@
     
     </div>
 
-    <footer></footer>
+    <footer>
+        <div></div>
+        <div></div>
+        <div></div>
+    </footer>
     
     <script src="game.js"></script>
 </body>
