--- a/YanKenPo/index.html
+++ b/YanKenPo/index.html
@@ -52,11 +52,7 @@
     
     </div>
 
-    <footer>
-        <div></div>
-        <div></div>
-        <div></div>
-    </footer>
+    <footer></footer>
     
     <script src="game.js"></script>
 </body>
