--- a/YanKenPo/index.html
+++ b/YanKenPo/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-    <header>
+    <header id="header">
         <div class="container">
             <img src="../res/logoAM2.png" alt="AM">
         </div>
@@ -78,10 +78,8 @@
     
             <div class="computer">
                 <h2 class="subtitle">Mi elección:</h2>
-                <div id="comp-election">
-                    <img id="comp-image" src="./res/aleatorio.png" alt="">
-                    <p id="comp-text">Aleatorio</p>
-                </div>
+                <img id="comp-image" src="./res/aleatorio.png" alt="">
+                <p id="comp-text">Aleatorio</p>
             </div>
         </div>
     </main>
