--- a/index.html
+++ b/index.html
@@ -13,6 +13,55 @@
     <title>Alejandro Manrique</title>
 </head>
 <body>
+
+    <header id="header">
+        <div class="container">
+            <img src="./res/logoAM4.png" alt="AM">
+        </div>
+    </header>
+
+    <main>
+        <div class="left">
+            <h2>Hola, soy</h2>
+            <div class="left-text">
+                <h1>Alejandro</h1>
+                <div></div>
+            </div>
+            <p class="main-desc">
+                Un entusiasta estudiante y desarrollador web front-end con conocimientos básicos de backend, y de aplicaciones móviles Android, que además domina el idioma inglés y tiene múltiples reconocimientos.
+            </p>
+            <span class="left-inv">Echa un vistazo</span>
+            <div class="left-underline"></div>
+        </div>
+    </main>
+
+    <footer>
+        <nav>
+            <a class="button" onclick="">
+                <img src="./res/home/primIcons/habilidades.svg" alt="">
+                <span>Habilidades</span>
+            </a>
+            <div class="nav-sep"></div>
+
+            <a class="button" onclick="">
+                <img src="./res/home/primIcons/proyectos.svg" alt="">
+                <span>Proyectos</span>
+            </a>
+            <div class="nav-sep"></div>
+
+            <a class="button" onclick="">
+                <img src="./res/home/primIcons/reconocimientos.svg" alt="">
+                <span>Reconocimientos</span>
+            </a>
+            <div class="nav-sep"></div>
+
+            <a class="button" onclick="">
+                <img src="./res/home/primIcons/persona.svg" alt="">
+                <span>Sobre mí</span>
+            </a>
+        </nav>
+    </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
