--- a/YanKenPo/index.html
+++ b/YanKenPo/index.html
@@ -16,12 +16,12 @@
 
     <header id="header">
         <div class="container">
-            <img src="../res/logoAM3.png" alt="AM">
+            <h2>AM</h2>
         </div>
         <div class="container">
             <div>
-                <a href="../index.html">Portafolio</a>
-                <a href="">Sobre mí</a>
+                <a href="https://github.com/alejo742/alejo742.github.io">Portafolio</a>
+                <a href="../index.html">Sobre mí</a>
             </div>
         </div>
     </header>
