--- a/YanKenPo/index.html
+++ b/YanKenPo/index.html
@@ -20,8 +20,8 @@
         </div>
         <div class="container">
             <div>
-                <a href="https://github.com/alejo742/alejo742.github.io">Portafolio</a>
-                <a href="../index.html">Sobre mí</a>
+                <a target="_blank" href="https://github.com/alejo742/alejo742.github.io">Portafolio</a>
+                <a target="_blank" href="../index.html">Sobre mí</a>
             </div>
         </div>
     </header>
