--- a/index.html
+++ b/index.html
@@ -169,17 +169,21 @@
         <div class="projects">
             <section class="projects-left">
                 <h2>Mis<br>Proyectos <strong>+</strong></h2>
-                <div class="project">
-                    <h3 class="project-name"></h3>
-                </div>
-                <div class="change-projects">
-                    <a id="projects-arrow-left" class="projects-arrow" onclick="changeProjects()"><</a>
-                    <a id="projects-arrow-right" class="projects-arrow" onclick="changeProjects()">></a>
-                </div>
+
+                <a href="./YanKenPo/index.html" class="project visible" style="background-image: url('./IPCole/res/landing/collage_cybercrime.png');">
+                    <h3>Piedra, papel o tijeras</h3>
+                </a>
             </section>
             
             <section class="projects-right">
-                
+                <a href="./YanKenPo/index.html" class="project visible" style="background-image: url('./IPCole/res/landing/collage_cybercrime.png');">
+                    <h3>CyberStop</h3>
+                </a>
+
+                <a href="./YanKenPo/index.html" class="project visible" style="background-image: url('./IPCole/res/landing/collage_cybercrime.png');">
+                    <h3>Luka</h3>
+                </a>
+
             </section>
         </div>
         <div id="career" class="career"></div>
