--- a/index.html
+++ b/index.html
@@ -170,17 +170,17 @@
             <section class="projects-left">
                 <h2>Mis<br>Proyectos <strong>+</strong></h2>
 
-                <a href="./YanKenPo/index.html" class="project visible" style="background-image: url('./IPCole/res/landing/collage_cybercrime.png');">
+                <a href="./YanKenPo/index.html" class="project visible" style="background-image: url('./res/projectMinis/yankenpo\ mini.png');">
                     <h3>Piedra, papel o tijeras</h3>
                 </a>
             </section>
             
             <section class="projects-right">
-                <a href="./YanKenPo/index.html" class="project visible" style="background-image: url('./IPCole/res/landing/collage_cybercrime.png');">
+                <a href="./IPCole/index.html" class="project visible" style="background-image: url('./res/projectMinis/cyberstop\ mini.png');">
                     <h3>CyberStop</h3>
                 </a>
 
-                <a href="./YanKenPo/index.html" class="project visible" style="background-image: url('./IPCole/res/landing/collage_cybercrime.png');">
+                <a href="./YanKenPo/index.html" class="project visible" style="background-image: url('./res/projectMinis/luka\ mini.png');">
                     <h3>Luka</h3>
                 </a>
 
