--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     <h3>CyberStop</h3>
                 </a>
 
-                <a href="./YanKenPo/index.html" class="project visible" style="background-image: url('./res/projectMinis/luka\ mini.png');">
+                <a href="./Luka/index.html" class="project visible" style="background-image: url('./res/projectMinis/luka\ mini.png');">
                     <h3>Luka</h3>
                 </a>
 
