--- a/index.html
+++ b/index.html
@@ -279,7 +279,24 @@
             </section>
     </div>
 
+    <div class="contact">
+        <h3>Por último</h3>
+        <h2>Contáctame</h2>
+        <p></p>
+        <div>
+            <a href="" class="cv-inv">> Mi CV</a>
+            <div class="cv-inv-underline"></div>
+        </div>
+    </div>
 
+    <footer>
+        <div>
+            <h2>AM</h2>
+        </div>
+        <div>
+            <h3>Hecho por mí :)</h3>
+        </div>
+    </footer>
 
     <script src="script.js"></script>
 </body>
