port UI finished

--- a/index.html
+++ b/index.html
@@ -282,19 +282,19 @@
     <div class="contact">
         <h3>Por último</h3>
         <h2>Contáctame</h2>
-        <p></p>
-        <div>
-            <a href="" class="cv-inv">> Mi CV</a>
-            <div class="cv-inv-underline"></div>
-        </div>
+        <p>Si te interesa trabajar conmigo o solicitar mi ayuda en algún proyecto, ¡eres bienvenido a enviarme un correo a <a>a.manrique742@gmail</a> y hacérmelo saber!</p>
+        <a target="_blank" href="mailto:a.manrique742@gmail.com" class="contact-inv">> Envíame un email</a>
+        <div class="contact-inv-underline"></div>
     </div>
 
     <footer>
-        <div>
-            <h2>AM</h2>
-        </div>
-        <div>
-            <h3>Hecho por mí :)</h3>
+        <div class="footer-wrapper">
+            <div class="f-wrap">¿
+                <h2>Alejandro Manrique</h2>
+            </div>
+            <div class="f-wrap">
+                <h3>Hecho por mí :)</h3>
+            </div>
         </div>
     </footer>
 
