--- a/index.html
+++ b/index.html
@@ -193,12 +193,6 @@
     <div id="career" class="career">
             <section class="career-top">
                 <h2 class="reveal-right"><strong>|</strong> Carrera</h2>
-                <div>
-                    <div class="reveal-left">
-                        <a href="" class="cv-inv">> Mi CV</a>
-                        <div class="cv-inv-underline"></div>
-                    </div>
-                </div>
             </section>
             <section class="career-wrap">
                 <div class="career-left career-c">
@@ -208,17 +202,26 @@
                         <span>Innova World MUN | Oct. 2020</span>
                         <p>Premio a la mejor participación dentro del comité</p>
                     </a>
-                    <a class="achievement hidden reveal-up">
-                        
+
+                    <a class="achievement hidden reveal-up" target="_blank" href="./res/documents/Diploma Codecademy Kotlin.pdf">
+                        <img src="./res//docMinis/kotlin diploma.png" alt="">
+                        <h3>Programación en Kotlin</h3>
+                        <span>Codecademy | May. 2021 - Ago. 2021</span>
+                        <p>Nivel intermedio en el lenguaje de programación Kotlin, usado en desarrollo de aplicaciones Android.</p>
                     </a>
+
                     <a target="_blank" href="./res/documents/Certificado LOOP.pdf" class="achievement visible reveal-up">
                         <img src="./res/docMinis/loop diploma.png" alt="">
                         <h3>Finalización del LOOP</h3>
                         <span>Missouri State University | Jul. 2021 - Ago. 2021</span>
                         <p>Culminación del Leadership and Oratory Program de la MSU, becado.</p>
                     </a>
-                    <a class="achievement hidden reveal-up">
-                        
+
+                    <a class="achievement hidden reveal-up" target="_blank" href="./res/documents/Certificado Toefl B2.pdf">
+                        <img src="./res/docMinis/toefl diploma.png" alt="">
+                        <h3>Certificado de nivel de inglés</h3>
+                        <span>ETS| Abr. 2022</span>
+                        <p>Nivel B2 certificado de inglés, a través del examen TOEFL</p>
                     </a>
 
                     <a target="_blank" href="./res/documents/Best Delegate CAPEC.pdf" class="achievement visible reveal-up">
@@ -286,11 +289,12 @@
 
     <footer>
         <div class="footer-wrapper">
-            <div class="f-wrap">
+            <div class="f-wrap f-wrap-1">
                 <h2>Alejandro Manrique</h2>
             </div>
-            <div class="f-wrap">
-                <h3>Hecho por mí :)</h3>
+            <div class="cv-c">
+                <a target="_blank" href="./res/documents/CV Alejandro Manrique.pdf" class="cv-inv">> Mi Currículum</a>
+                <div class="cv-inv-underline"></div>
             </div>
         </div>
     </footer>
