--- a/YanKenPo/index.html
+++ b/YanKenPo/index.html
@@ -78,9 +78,16 @@
                 <img id="comp-image" src="./res/aleatorio.png" alt="">
                 <p id="comp-text">Aleatorio</p>
             </div>
+
+            
         </div>
     </main>
-    
+
+    <div id="pop-up">
+        <h2>Texto</h2>
+        <a>Aceptar</a>
+    </div>
+
     <script src="game.js"></script>
 </body>
 </html>
