IP landing responsive

--- a/IPCole/index.html
+++ b/IPCole/index.html
@@ -9,7 +9,7 @@
     <style>
         
     </style>
-    <title>CyberStop</title>
+    <title>CyberStop | Protégete de los ciberdelitos</title>
 </head>
 
 <body>
@@ -53,11 +53,84 @@
         </section>
 
         <section class="main-section main-section-3">
-            <h1>333333333333</h1>
+            <h3>También</h3>
+            <h2>Infórmate<strong>.</strong></h2>
+            <p>Averigua a qué ciberdelitos eres más vulnerable, y recibe recomendaciones para resolver esas vulnerabilidades.</p>
+            <a href="./informate.html">Conoce más</a>
+            <div>
+                <img class="little-image little-image-1" src="./res/landing/littleImages/litIcon1.png">
+                <img class="little-image little-image-2" src="./res/landing/littleImages/litIcon2.png">
+                <img class="little-image little-image-3" src="./res/landing/littleImages/litIcon3.png">
+                <img class="little-image little-image-4" src="./res/landing/littleImages/litIcon4.png">
+                <img class="little-image little-image-5" src="./res/landing/littleImages/litIcon5.png">
+                <img class="little-image little-image-6" src="./res/landing/littleImages/litIcon6.png">
+                <img class="little-image little-image-7" src="./res/landing/littleImages/litIcon7.png">
+            </div>
         </section>
 
         <section class="main-section main-section-4">
-            <h1>44444444444</h1>
+            <h2>Nuestro equipo</h2>
+            <div class="ms4-wrapper">
+                <div class="member">
+                    <div class="member-banner">
+                        <img src="https://blush-design.imgix.net/teams/i5lQauBWBNG3ggLli3FR/logo/d0aa1c9c-46ee-4253-b231-f5b0f2414160.png?w=400&h=400" alt="">
+                    </div>
+                    <div class="member-desc">
+                        <h3>Alejandro Manrique</h3>
+                        <p>Programador y diseñador visual de la página.</p>
+                    </div>
+                </div>
+
+                <div class="member">
+                    <div class="member-banner">
+                        <img src="https://blush-design.imgix.net/teams/lx9FnkYBjaI3G0PzJjoo/logo/9e3d840d-10c3-4c09-a6f1-a1d32d033766.jpeg?w=400&h=400" alt="">
+                    </div>
+                    <div class="member-desc">
+                        <h3>Luciana Torres</h3>
+                        <p>Encargada del acabado del proyecto y búsqueda de los detalles.</p>
+                    </div>
+                </div>
+
+                <div class="member">
+                    <div class="member-banner">
+                        <img src="https://blush-design.imgix.net/teams/0kAMYyZvgLJyWAyj36uL/logo/d2c731d9-8854-4d83-b1ba-74fbc7deac0d.jpeg?w=400&h=400" alt="">
+                    </div>
+                    <div class="member-desc">
+                        <h3>Andrea Bustos</h3>
+                        <p>Organiza las tareas y distribuye los pendientes.</p>
+                    </div>
+                </div>
+
+                <div class="member">
+                    <div class="member-banner">
+                        <img src="https://blush-design.imgix.net/teams/6ZVyn0iuz0q4rsMbgDR5/logo/5b97ca47-8f3e-45bf-895a-2d30e9d6ab6b.jpeg?w=400&h=400" alt="">
+                    </div>
+                    <div class="member-desc">
+                        <h3>Flavia Abarca</h3>
+                        <p>Diseña vectores, iconos, layouts e imágenes para el proyecto.</p>
+                    </div>
+                </div>
+
+                <div class="member">
+                    <div class="member-banner">
+                        <img src="https://blush-design.imgix.net/teams/BKGUIV1om8W4pprYyqSW/logo/110df291-5ae2-480f-aadb-0d93df9241d8.jpg?w=400&h=400" alt="">
+                    </div>
+                    <div class="member-desc">
+                        <h3>Franco Bengoa</h3>
+                        <p>Mantiene el diálogo asertivo y la colaboración animosa.</p>
+                    </div>
+                </div>
+
+                <div class="member">
+                    <div class="member-banner">
+                        <img src="https://blush-design.imgix.net/teams/SYvJljvN7kGGXT7BfwqQ/logo/e8cda0f8-3c4d-4508-9987-381fcbd755b4.jpeg?w=400&h=400" alt="">
+                    </div>
+                    <div class="member-desc">
+                        <h3>Olenka Vilca</h3>
+                        <p>Dispone los materiales y lo necesario para el proyecto.</p>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <section class="page-navigation">
