--- a/IPCole/index.html
+++ b/IPCole/index.html
@@ -6,9 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/index.css">
     <link rel="icon" href="./res/general/logo-cyberstop.png">
-    <style>
-        
-    </style>
     <title>CyberStop | Protégete de los ciberdelitos</title>
 </head>
 
@@ -19,8 +16,8 @@
             <h3>cyberstop</h3>
         </div>
         <div class="header-div-right">
-            <a class="h-login" href="">Inicia sesión</a>
-            <a class="h-register" href="">Regístrate</a>
+            <a class="h-login" href="./login.html">Inicia sesión</a>
+            <a class="h-register" href="./register.html">Regístrate</a>
         </div>
     </header>
 
