--- a/IPCole/login.html
+++ b/IPCole/login.html
@@ -5,12 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/login.css">
-    <link rel="icon" href="../IP2022/res/general/cybersecurity-icon-rounded.png">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Hubballi&family=Josefin+Sans:wght@400&family=League+Gothic&family=Sansita+Swashed:wght@300&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Nunito:wght@300&family=Poppins:wght@300&family=Raleway:wght@500&display=swap');
-    </style>
-    <title>Inicia Sesión</title>
+    <link rel="icon" href="./res/general/logo-cyberstop.png">
+    <title>Inicia Sesión | Accede a nuestra plataforma</title>
 </head>
 <body>
     <main>
@@ -20,15 +16,13 @@
             <div class="ml-container">
 
                 <div class="ml-title">
-                    <h1>Inicia sesión en CyberStop</h1>
+                    <h1>Inicia sesión</h1>
                 </div>
                 <div class="ml-email">
-                    <h2>Correo electrónico</h2>
-                    <input id="email-input" type="email" autocomplete="email">
+                    <input placeholder="Correo electrónico" id="email-input" type="email" autocomplete="email">
                 </div>
                 <div class="ml-password">
-                    <h2>Contraseña</h2>
-                    <input id="password-input" type="password">
+                    <input placeholder="Contraseña" id="password-input" type="password">
                 </div>
                 <div class="ml-showpass">
                     <input onclick="showPass()" id="showpass-checkbox" type="checkbox">
@@ -45,7 +39,15 @@
 
         </div>
 
+        <div class="right-background"></div>
+
     </main>
+    <footer>
+        <a target="_blank" href="../index.html">
+            <span>Creado por</span>
+            <h2>AM</h2>
+        </a>
+    </footer>
     <script src="./scripts/login.js"></script>
 </body>
 </html>
