--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--! Google -->
+    <meta itemprop="name" content="Alejandro Manrique" />
+    <meta itemprop="description" content="El portafolio de Alejandro Manrique, estudiante peruano" />
+    <meta itemprop="image" content="" />
+
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="">
     <style>
@@ -289,7 +294,7 @@
 
     <footer>
         <div class="footer-wrapper">
-            <div class="f-wrap f-wrap-1">
+            <div class="f-wrap">
                 <h2>Alejandro Manrique</h2>
             </div>
             <div class="cv-c">
