--- a/IPCole/index.html
+++ b/IPCole/index.html
@@ -15,10 +15,7 @@
             <img src="./res/general/logo-cyberstop.png" alt="">
             <h3>cyberstop</h3>
         </div>
-        <div class="header-div-right">
-            <a class="h-login" href="./login.html">Inicia sesión</a>
-            <a class="h-register" href="./register.html">Regístrate</a>
-        </div>
+        <div class="header-div-right"></div>
     </header>
 
     <main>
